# Snippets

./: .emacs  2.c  ChangeExtension.py  README.md  anagrama.cpp  fptr.cpp  funct_ptr.c  gdelt_parse.py  geraDecolar.py  insertionSortTemplate.cpp  lambda_test.cpp  mult_big_positive.c  parse.cpp  parse_smtp_date.cpp  print100.cpp  regex.cpp  rgx.cpp  stl_algorithms_snippets.cpp  stl_algorithms_snippets.cpp~  t.cpp  test_function.cpp  test_if.cpp  test_ptr.cpp  test_thread.cpp  test_vec.cpp  teste.cpp  teste_argv.cpp  teste_char.cpp  teste_functor.cpp  teste_ini.cpp  teste_loop.cpp  teste_prt_vec.cpp  teste_rgx.cpp  teste_static.cpp  teste_unique.cpp  teste_vec.cpp  use_weak_ptr.cpp  validate_datetime.cpp  validate_email.cpp
AQuestionADay/: eval.py  melt_histogram.py  min_transaction.py  string_perm.py
CCI/: URLify.py  is_perm_ex12.py  is_perm_pal.py  perm.py  simple_compress.py  str_unique_chars_ex11.py  was_edited.py
Calc/: CallApp.c  compile.sh
CodeChallenges/cut/: CMakeLists.txt  Cut.cpp  Cut.h  Tests.cpp  main.cpp
CodeChallenges/cut/data/: fourchords.tsv
CodeChallenges/huffman/: CMakeLists.txt  Huffman.cpp  Huffman.h  test.cpp
CodeChallenges/json_parser/: CMakeLists.txt  JsonParser.cpp  JsonParser.h  Tests.cpp  main.cpp
CodeChallenges/json_parser/tests/: 3.txt  5.txt  6.txt  7.txt  8.txt  9.txt
CodeChallenges/random_walk/: CMakeLists.txt  RandomWalk.cpp  RandomWalk.h  main.cpp
CodeForces/: CodeForces_112A.py  CodeForces_116A.py  CodeForces_131A.py  CodeForces_266A.py  CodeForces_339A.py
Codility/: find_gaps.cc
EmailValidator/: secondary.txt  validate_email.cpp
Go/: HelloWorld.go  download_booking.go  echo.go  execute_text_editor.go  find_peak.go  mergesort.go  moretypes26.go
HR/: abstract-classes-polymorphism.cpp  apple-and-orange.go  array-left-rotation.py  balanced-brackets.py  basic_statistics.py  beautiful-days-at-the-movies.go  beautiful-triplets.go  between-two-sets.go  binary-search-tree-lowest-common-ancestor.cpp  binomial_distribution_1.go  binomial_distribution_2.go  bon-appetit.go  breaking-best-and-worst-records.go  camelcase.go  cats-and-a-mouse.go  circle_city.cpp  circular-array-rotation.py  compare-the-triplets.py  components-in-graph.py  contacts.cpp  convex_hull.py  couple_passions.py  designer-pdf-viewer.py  dest_together.py  divisible-sum-pairs.go  drawing-book.go  dynamic-array.py  equal-stacks.py  equality-in-a-array.go  event_raffle.py  find-the-running-median.py  geometric_distribution.go  geometric_distribution2.py  good_memories.py  grading.go  hackerrank-in-a-string.go  happy-ladybugs.py  interquartile_range.py  is-binary-search-tree.py  jumping-on-the-clouds-revisited.go  (+29 more)
PermutationGenerator/: PermutationGenerator.hpp  PermutationGenerator_test.cpp  perm_gen.py  test_perm_gen.py
Silberschatz/: collatz.c  collatz_shm.c  echo_server.c  fibo_thread.c  filecopy.c  monte_carlo.c  monte_carlo_openmp.c  osh.c  pid_manager.c  pid_manager_thread.c  primes.c  qod.c  reverse.c  statistics.c
cormen/: mergesort.py  test_mergesort.py
findhome/: .db_manager.py.swp  .findhome.py.swo  .findhome.py.swp  config_db.conf  db_manager.py  findhome.py  test_db.py
g4g/: bfs.cpp  binary_search.cpp  count_inc_subseq.py  dfs.cpp  dijkstra.cpp  equilibrium_point.py  faulty_keyboard.py  happy_number.py  lcs.cpp  least_prime_factor.cpp  segments.py  (+4 more)
(+126 files in other folders)
